--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,37 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+
+@font-face {
+    font-family: Theinhardt-Medium;
+    src: url('../fonts/Theinhardt-Medium.otf');
+}
+@font-face {
+    font-family: Theinhardt-Bold;
+    src: url('../fonts/Theinhardt-Bold.otf');
+}
+*{
+  font-family: Theinhardt-Medium;
+}
 html, body {
   overflow: hidden;
 }
+ .navbar{
+  padding: 10px 15px;
+ }
+.navbar-brand{
+  font-size: 25px;
+  padding-right:20px;
+}
+.navbar-brand:hover{
+  color: 
+}
 
-.background {
+.navbar-brand ,.nav li a{
+  font-family: Theinhardt-Bold ;
+color: #5c5c5c;
+  }
+
+  .background {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -11,11 +39,11 @@ html, body {
   will-change: transform;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  height: 130vh;
+  height: 100vh;
   position: fixed;
   width: 100%;
-  -webkit-transform: translateY(30vh);
-          transform: translateY(30vh);
+  -webkit-transform: translateY(100vh);
+          transform: translateY(100vh);
   -webkit-transition: all 1s cubic-bezier(0,.91,.3,.97);
   transition: all 1s cubic-bezier(0,.91,.3,.97);
 }
@@ -28,36 +56,45 @@ html, body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.3);
 }
+
+
 .background:first-child {
-  background-image: url(https://s8.postimg.org/lf2udl5np/4_Aihmii.jpg);
-  -webkit-transform: translateY(-55vh);
-          transform: translateY(-55vh);
+  -webkit-transform: translateY(0vh);
+          transform: translateY(0vh);
 }
 .background:first-child .content-wrapper {
-  -webkit-transform: translateY(15vh);
-          transform: translateY(15vh);
+  -webkit-transform: translateY(0vh);
+          transform: translateY(0vh);
 }
 .background:nth-child(2) {
-  background-image: url(https://s8.postimg.org/ow4wgk4px/ugqti_Lg.jpg);
+    -webkit-transform: translateY(82vh);
+          transform: translateY(82vh);
+
 }
 .background:nth-child(3) {
-  background-image: url(https://s8.postimg.org/grwsbtiat/x_ZMOBTj.jpg);
+
 }
 
 /* Set stacking context of slides */
 .background:nth-child(1) {
-  z-index: 3;
+  background-color: #242424;
+  z-index: 1;
 }
 
 .background:nth-child(2) {
+  background-color: #c3dae8;
   z-index: 2;
 }
 
 .background:nth-child(3) {
-  z-index: 1;
+  background-color: #dcdbd7;
+  z-index: 3;
 }
+.background:nth-child(4) {
+  z-index: 4;
+}
+
 
 .content-wrapper {
   height: 100vh;
@@ -73,49 +110,113 @@ html, body {
   color: #fff;
   font-family: Montserrat;
   text-transform: uppercase;
-  -webkit-transform: translateY(40vh);
-          transform: translateY(40vh);
+  -webkit-transform: translateY(-80vh);
+          transform: translateY(-80vh);
   will-change: transform;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  -webkit-transition: all 0.7s cubic-bezier(0.22, 0.44, 0, 1);
-  transition: all 0.7s cubic-bezier(0.22, 0.44, 0, 1);
+  -webkit-transition: all 1s cubic-bezier(0,.91,.3,.97);
+  transition: all 1s cubic-bezier(0,.91,.3,.97);
 }
 .content-title {
   font-size: 12vh;
   line-height: 1.4;
 }
 
+
+
 .background.up-scroll {
-  -webkit-transform: translate3d(0, -15vh, 0);
-          transform: translate3d(0, -15vh, 0);
-}
-.background.up-scroll .content-wrapper {
-  -webkit-transform: translateY(15vh);
-          transform: translateY(15vh);
-}
-.background.up-scroll + .background {
-  -webkit-transform: translate3d(0, 30vh, 0);
-          transform: translate3d(0, 30vh, 0);
-}
-.background.up-scroll + .background .content-wrapper {
-  -webkit-transform: translateY(30vh);
-          transform: translateY(30vh);
+  -webkit-transform: translate3d(0, 82vh, 0);
+          transform: translate3d(0, 82vh, 0);
 }
 
+.background.up-scrolltwo {
+  -webkit-transform: translate3d(0, 100vh, 0);
+          transform: translate3d(0, 100vh, 0);
+}
+
+
 .background.down-scroll {
-  -webkit-transform: translate3d(0, -130vh, 0);
-          transform: translate3d(0, -130vh, 0);
-}
-.background.down-scroll .content-wrapper {
-  -webkit-transform: translateY(40vh);
-          transform: translateY(40vh);
-}
-.background.down-scroll + .background:not(.down-scroll) {
-  -webkit-transform: translate3d(0, -15vh, 0);
+    -webkit-transform: translate3d(0, -15vh, 0);
           transform: translate3d(0, -15vh, 0);
 }
-.background.down-scroll + .background:not(.down-scroll) .content-wrapper {
-  -webkit-transform: translateY(15vh);
-          transform: translateY(15vh);
+.background.down-scroll .content-wrapper {
+  -webkit-transform: translateY(0vh);
+          transform: translateY(0vh);
+}
+.background.down-scrolltwo {
+    -webkit-transform: translate3d(0, 82vh, 0);
+          transform: translate3d(0, 82vh, 0);
+}
+
+
+
+
+
+
+#dot-container{
+  position: fixed;
+  z-index: 10;
+  left: 50%;
+  transform: translate(-50%, 0);
+  top: 87vh;
+}
+
+.dotstyle ul {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.dotstyle li {
+  position: relative;
+  display: block;
+  float: left;
+  margin: 0 10px;
+  width: 8px;
+  height: 8px;
+  cursor: pointer;
+}
+
+.dotstyle li a {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border-radius: 50%;
+  background-color: #5c5c5c;
+  background-color: #5c5c5c;
+  text-indent: -999em; /* make the text accessible to screen readers */
+  cursor: pointer;
+  position: absolute;
+}
+
+.dotstyle li a:focus {
+  outline: none;
+}
+
+.dotstyle-fillin li a {
+  background-color: transparent;
+  box-shadow: inset 0 0 0 2px #5c5c5c;
+  -webkit-transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease;
+}
+
+.dotstyle-fillin li a:hover,
+.dotstyle-fillin li a:focus {
+  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.6)
+}
+
+.dotstyle-fillin li.current a {
+  box-shadow: inset 0 0 0 8px #5c5c5c;
 }
