--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-
-
 @font-face {
     font-family: Theinhardt-Medium;
     src: url('../fonts/Theinhardt-Medium.otf');
@@ -19,32 +16,38 @@
 
 
 *{
-  font-family: Theinhardt-Medium;
+  font-family: dincond-bold;
 }
 html, body {
   overflow: hidden;
 }
- .navbar{
+.icon-bar {
+  background: #556681;
+}
+.navbar{
   padding: 10px 15px;
- }
+}
+.navbar-nav > li > a:hover {
+  background: transparent;
+  color: #1e76ff;
+}
 .navbar-brand{
+  font-family: dincond-bold;
   font-size: 25px;
   padding-right:20px;
 }
 .navbar-brand:hover{
-  color: 
+  color: #1e76ff
 }
 #logo{
   height:40px;
 }
-
-.navbar-brand ,.nav li a{
+.navbar-brand ,.nav li a {
   font-family: Theinhardt-Bold ;
-color: #5c5c5c;
-  }
+  color: #7087ab;
+}
 
-  .background {
-    color: #5c5c5c;
+.background {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -60,6 +63,7 @@ color: #5c5c5c;
   -webkit-transition: all 1s cubic-bezier(0,.91,.3,.97);
   transition: all 1s cubic-bezier(0,.91,.3,.97);
 }
+
 .background:before {
   content: "";
   position: absolute;
@@ -70,7 +74,6 @@ color: #5c5c5c;
   right: 0;
   bottom: 0;
 }
-
 
 .background:first-child {
   -webkit-transform: translateY(0vh);
@@ -91,17 +94,15 @@ color: #5c5c5c;
 
 /* Set stacking context of slides */
 .background:nth-child(1) {
-  background-color: #dcdbd7;
+  background-color: #f5f9ff;
   z-index: 1;
 }
-
 .background:nth-child(2) {
-  background-color: #242424;
+  background-color: #394456;
   z-index: 2;
 }
-
 .background:nth-child(3) {
-  background-color: #b2cede;
+  background-color: #bdd8ea;
   z-index: 3;
 }
 .background:nth-child(4) {
@@ -133,23 +134,48 @@ color: #5c5c5c;
   transition: all 1s cubic-bezier(.15,.83,.96,.98);
 }
 
+.links > a {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 2.5vh;
+}
+.links > a:hover {
+  text-decoration: none;
+  color: #1e76ff;
+}
 
 /*Slide 1 content*/
+
+#s8 {
+  top: 30vh;
+  left: 25%;
+  height: 900px;
+  position: fixed;
+}
 .content-title {
-  font-size: 6vh;
+  font-size: 8vh;
 }
 .content-info{
-  font-size: 3vh;
+  font-size: 4vh;
 }
 
+#ct1 {
+  font-family: dincond-bold;
+}
 #ct1, #ci1{
+  color: #556681;
   position: fixed;
   top: 10%;
   left: 50%;
 }
 #ci1{
-  top:17%;
+  color: #7087AB;
+  top: 20%;
 }
+#ci2 {
+  color: #b8c8e1;
+  font-size: 3vh;
+}
+
 #img1{
   position: fixed;
   height: 350px;
@@ -163,7 +189,7 @@ color: #5c5c5c;
   left: 5%;
   width: 150px;
   height: 150px;
-  background: #424242;
+  background: #394456;
   -moz-border-radius: 100px;
   -webkit-border-radius: 100px;
   border-radius: 100px;
@@ -211,59 +237,41 @@ font-size: 4.1vh;
 /*3rd slide content*/
 
 #drill-wrapper{
+  z-index: 100;
   font-size: 3vh;
   position: fixed;
   width:400px;
   left: 63%;
   top: 44%;
 }
-
-#drill-info{
-  font-size: 2.8vh;
-}
-
 #drills{
-color: white;
+color: #319df0;
 font-size: 4vh;
 }
 
 #drill{
   position: fixed;
   right:33%;
-  top:5vh;
+  top:7vh;
   height: 750px;
 }
 
-/*Slide 3 content*/
+/*Slide 4 content*/
 
-
-#cs-wrapper{
-  font-size: 3vh;
+#cs {
   position: fixed;
-  width:870px;
-  left: 80%;
-  top: 74%;
-}
-
-#cs-info{
-  font-size: 2.8vh;
-}
-
-#css{
-color: white;
-font-size: 4vh;
-}
-
-#cs{
-  position: fixed;
-  right: 0;
-  top:18vh;
+  top: 20vh;
+  left: 45%;
   height: 500px;
 }
-
-
-
-
+#css {
+  color: white;
+  font-size: 4vh;
+}
+#cs-info{
+  color: #aaa;
+  font-size: 2.8vh;
+}
 
 .background.up-scroll {
   -webkit-transform: translate3d(0, 82vh, 0);
@@ -288,9 +296,6 @@ font-size: 4vh;
     -webkit-transform: translate3d(0, 82vh, 0);
           transform: translate3d(0, 82vh, 0);
 }
-
-
-
 
 
 
@@ -347,7 +352,7 @@ font-size: 4vh;
 
 .dotstyle-fillin li a {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px #5c5c5c;
+  box-shadow: inset 0 0 0 2px #7087ab;
   -webkit-transition: box-shadow 0.3s ease;
   transition: box-shadow 0.3s ease;
 }
@@ -358,5 +363,5 @@ font-size: 4vh;
 }
 
 .dotstyle-fillin li.current a {
-  box-shadow: inset 0 0 0 8px #5c5c5c;
+  box-shadow: inset 0 0 0 8px #1e76ff;
 }
